force-app/main/default/objects/Service_Type__c/fields/Basis_Trigger_Setting__c.field-meta.xml
<CustomField>
    <fullName>Basis_Trigger_Setting__c</fullName>
    <label>Basis Trigger Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trigger_Setting</valueSetName>
    </valueSet>
</CustomField>