force-app/main/default/objects/Service_Type__c/fields/Full_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Full_Requirements__c</fullName>
    <formula>CONTAINS(Name, &#39;Full Req&#39;)</formula>
    <label>Full Requirements</label>
    <type>Checkbox</type>
</CustomField>